[ci] Cleanup deprecated code in test class